add projects.html  add links to side nav

--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Kenneth J Saganski</title>
+	<title>Projects</title>
 	<link rel="stylesheet" href="styles.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -43,7 +43,7 @@
     <div class="col s12 m6 offset-m3"">
       <div class="card blue-grey darken-4">
         <div class="card-content white-text">
-          <h3 class="page-title">Kenneth J Saganski</h3>
+          <h3 class="page-title">Projects</h3>
         </div>
       </div>
     </div>
