--- a/index.html
+++ b/index.html
@@ -49,6 +49,17 @@
     </div>
   </div>  
 
+  <div class="row">
+    <div class="col s12 m6 offset-m3"">
+      <div class="card blue-grey darken-4">
+        <div class="card-content white-text">
+          <h3 class="page-title">Full Stack Web Developer</h3>
+        </div>
+      </div>
+    </div>
+  </div> 
+
+
 
 
 </body>
