add description and links to books webiste

--- a/projects/ghost-writer.html
+++ b/projects/ghost-writer.html
@@ -53,9 +53,9 @@
     <div class="col s12 m6 offset-m3"">
       <div class="card blue-grey darken-4">
         <div class="card-content white-text">
-          <h5 class="page-title">Ghostwriter is a simple yet powerful web-app designed to help people write in the styles of Shakespeare, J.K. Rowling, and George R.R. Martin by suggesting words for the user to use while writing. <br> <br>
+          <p class="page-title">Ghostwriter is a simple yet powerful web-app designed to help people write in the styles of Shakespeare, J.K. Rowling, and George R.R. Martin by suggesting words for the user to use while writing. <br> <br>
 
-					For example: if the user is using the George R.R. Martin library amd types "You know nothing", the app might suggest "Jon" as in "Jon Snow</h5>
+					For example: if the user is using the George R.R. Martin library amd types "You know nothing", the app might suggest "Jon" as in "Jon Snow</p>
         </div>
       </div>
     </div>
