--- a/projects/books.html
+++ b/projects/books.html
@@ -53,9 +53,11 @@
     <div class="col s12 m6 offset-m3"">
       <div class="card blue-grey darken-4">
         <div class="card-content white-text">
-          <h5 class="page-title">The greatest in all space and time <br> <br>
+          <p class="page-title">The greatest in all space and time <br> <br>
+            I took an aggregate list, like the Time’s all-time 100 novel list, and added it to a csv sheet.  I did this 10 times. 
+            I then aggregated the aggregated list. For example Catch-22 appeared on 9 out of the 10 list. Giving it the rank of 9. Then the books are sorted by their rank 
 
-					For example: if the user is using the George R.R. Martin library amd types "You know nothing", the app might suggest "Jon" as in "Jon Snow</h5>
+					</p>
         </div>
       </div>
     </div>
@@ -67,6 +69,16 @@
       <div class="card blue-grey darken-4">
         <div class="card-content white-text">
           <h5 class="project-title"><a href="https://github.com/saganawski/ghostwritr-web">Github Project link</a></h5>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col s12 m6 offset-m3"">
+      <div class="card blue-grey darken-4">
+        <div class="card-content white-text">
+          <h5 class="project-title"><a href="https://secure-brushlands-69735.herokuapp.com/">Live website link</a></h5>
         </div>
       </div>
     </div>
