--- a/projects/conway-gol.html
+++ b/projects/conway-gol.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Projects</title>
-	<link rel="stylesheet" href="styles.css">
+	<title>Conway Game of Life</title>
+	<link rel="stylesheet" href="../styles.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
@@ -25,16 +25,16 @@
 
 	 <ul id="slide-out" class="side-nav blue-grey">
 
-    <li><a href="index.html"><span class="white-text name">Home</span></a></li>
+    <li><a href="../index.html"><span class="white-text name">Home</span></a></li>
     <li><div class="user-view">
-      <img class="circle profile" src="images/puppy-and-dad.jpg">
+      <img class="circle profile" src="../images/puppy-and-dad.jpg">
 
       <li><span class="email">saganawski+dev@gmail.com</span></li>
     </div></li>
-	  <li><a href="images/KennethSaganski.pdf" target="_blank"><span>Resume</span></a></li>
+	  <li><a href="../images/KennethSaganski.pdf" target="_blank"><span>Resume</span></a></li>
 	  <li><a href="https://www.linkedin.com/in/ken-saganski/"><span >Linkedin</span></a></li>
     <li><a href="https://github.com/saganawski"><span >GitHub</span></a></li>
-    <li><a href="projects.html"><span >Projects</span></a></li>
+    <li><a href="../projects.html"><span >Projects</span></a></li>
   </ul>
   <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
 
@@ -43,42 +43,38 @@
     <div class="col s12 m6 offset-m3"">
       <div class="card blue-grey darken-4">
         <div class="card-content white-text">
-          <h3 class="page-title">Projects</h3>
-        </div>
-      </div>
-    </div>
-  </div>  
-
-  <div class="row">
-    <div class="col s12 m5 offset-m3"">
-      <div class="card blue-grey darken-4">
-        <div class="card-content white-text">
-          <h5 class="project-title"><a href="projects/ghost-writer.html">Ghost Writer</a></h5>
-        </div>
-      </div>
-    </div>
-  </div> 
-
-  <div class="row">
-    <div class="col s12 m5 offset-m3"">
-      <div class="card blue-grey darken-4">
-        <div class="card-content white-text">
-          <h5 class="project-title"><a href="projects/books.html">Books</a></h5>
-        </div>
-      </div>
-    </div>
-  </div> 
-
-  <div class="row">
-    <div class="col s12 m5 offset-m3"">
-      <div class="card blue-grey darken-4">
-        <div class="card-content white-text">
-          <h5 class="project-title"><a href="projects/conway-gol.html">Conway Game Of Life</a></h5>
+          <h3 class="project-title">Conway Game of Life</h3>
         </div>
       </div>
     </div>
   </div>
 
+  <div class="row">
+    <div class="col s12 m6 offset-m3"">
+      <div class="card blue-grey darken-4">
+        <div class="card-content white-text">
+          <p class="project-title">
+          	The Game of Life, also known simply as Life, is a cellular automaton devised by the British mathematician John Horton Conway in 1970. <br> <br>
+
+			The "game" is a zero-player game, meaning that its evolution is determined by its initial state, requiring no further input. One interacts with the Game of Life by creating an initial configuration and observing how it evolves, or, for advanced "players", by creating patterns with particular properties.
+			<a href="https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life">Wikipedia origin</a>
+
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>    
+
+
+  <div class="row">
+    <div class="col s12 m6 offset-m3"">
+      <div class="card blue-grey darken-4">
+        <div class="card-content white-text">
+          <h5 class="project-title"><a href="https://github.com/saganawski/Conway">Github Project link</a></h5>
+        </div>
+      </div>
+    </div>
+  </div>
 
 </body>
 </html>
