--- a/index.html
+++ b/index.html
@@ -59,6 +59,17 @@
     </div>
   </div> 
 
+  <div class="row">
+    <div class="col s12 m6 offset-m3"">
+      <div class="card blue-grey darken-4">
+        <div class="card-content white-text">
+          <h3 class="page-title"><a href="projects.html"><span >Projects</span></a></h3>
+        </div>
+      </div>
+    </div>
+  </div> 
+
+
 
 
 
