update resume and link to github on books project

--- a/projects/books.html
+++ b/projects/books.html
@@ -68,7 +68,7 @@
     <div class="col s12 m6 offset-m3"">
       <div class="card blue-grey darken-4">
         <div class="card-content white-text">
-          <h5 class="project-title"><a href="https://github.com/saganawski/ghostwritr-web">Github Project link</a></h5>
+          <h5 class="project-title"><a href="https://github.com/saganawski/books">Github Project link</a></h5>
         </div>
       </div>
     </div>
