add videos to project euler

--- a/projects/project-euler.html
+++ b/projects/project-euler.html
@@ -53,22 +53,33 @@
     <div class="col s12 m6 offset-m3"">
       <div class="card blue-grey darken-4">
         <div class="card-content white-text">
-          <p class="page-title">Comming soon! </p>
+          <h5 class="project-title"><a href="https://github.com/saganawski/Project-Euler">Github Project link</a></h5>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="row">
+    <div class="col s12 m6 offset-m3"">
+      <div class="card blue-grey darken-4">
+        <div class="card-content white-text">
+          <div style="position:relative;height:0;padding-bottom:75.0%"><iframe src="https://www.youtube.com/embed/BtGinX57JaU?ecver=2" width="480" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div>
+        </div>
+      </div>
+    </div>
+  </div>    
+
+  <div class="row">
+    <div class="col s12 m6 offset-m3"">
+      <div class="card blue-grey darken-4">
+        <div class="card-content white-text">
+          <div style="position:relative;height:0;padding-bottom:75.0%"><iframe src="https://www.youtube.com/embed/qiswh1V6SE4?ecver=2" width="480" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div>
         </div>
       </div>
     </div>
   </div>    
 
 
-  <div class="row">
-    <div class="col s12 m6 offset-m3"">
-      <div class="card blue-grey darken-4">
-        <div class="card-content white-text">
-          <h5 class="project-title"><a href="https://github.com/saganawski">Github Project link</a></h5>
-        </div>
-      </div>
-    </div>
-  </div>
 
 </body>
 </html>
