--- a/projects.html
+++ b/projects.html
@@ -49,6 +49,15 @@
     </div>
   </div>  
 
+  <div class="row">
+    <div class="col s12 m5 offset-m3"">
+      <div class="card blue-grey darken-4">
+        <div class="card-content white-text">
+          <h5 class="project-title"><a href="projects/tic-tac-toe/game.html">Tic-Tac-Toe</a></h5>
+        </div>
+      </div>
+    </div>
+  </div> 
 
   <div class="row">
     <div class="col s12 m5 offset-m3"">
