--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="card-content white-text">
           <h3 class="page-title">Full Stack Web Developer</h3>
           <p class="subtext">Some big changes to come soon. 05/05/2021</p>
-          <p class="subtext">I abonded this website 4 years looking to do some cool new things soon </p>
+          <p class="subtext">I abandoned this website 4 years looking to do some cool new things soon </p>
         </div>
       </div>
     </div>
