--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       <li><span class="email">saganawski+dev@gmail.com</span></li>
     </div></li>
-	  <li><a href="images/Kenneth-Saganski-resume.pdf" target="_blank"><span>Resume</span></a></li>
+	  <li><a href="images/KennethSaganski.pdf" target="_blank"><span>Resume</span></a></li>
 	  <li><a href="https://www.linkedin.com/in/ken-saganski/"><span >Linkedin</span></a></li>
     <li><a href="https://github.com/saganawski"><span >GitHub</span></a></li>
     <li><a href="projects.html"><span >Projects</span></a></li>
