--- a/frontend/audiobook-translation-app-webpage.html
+++ b/frontend/audiobook-translation-app-webpage.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Audiobook Translation App: A Proof of Concept using AI</h1>
+        <h1>AI Translation: A Proof of Concept</h1>
     </header>
 
     <main>
